# Smart_Trash_Bin

./: CMakeLists.txt  IRSensor.c  IRSensor.h  LWIP_RAND.h  Trash_bin.c  Ultrasonic.c  Ultrasonic.h  led.c  led.h  lwipopts.h  notification.c  notification.h  servomotor.c  servomotor.h
